<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_generated_passwords"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brian.passwordgenerator.GeneratedPasswords">

    <TextView
        android:text="@string/generatedThreads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:id="@+id/generatedThreads" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/generatedThreads"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/threadsPasswordsContainer">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:id="@+id/threadsPasswords">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/threadsList">

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <TextView
        android:text="@string/generatedAsync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/threadsPasswordsContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/generatedAsync"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/generatedAsync"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/asyncPasswordsContainer">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:id="@+id/asyncPasswords">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/asyncList" />
        </ScrollView>
    </RelativeLayout>

    <Button
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/asyncPasswordsContainer"
        android:layout_centerHorizontal="true"
        android:id="@+id/finishButton"
        android:onClick="finish"/>

</RelativeLayout>


